<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="email_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>

    <string name="share_link">https://practicum.yandex.com/android-developer/?from=catalog</string>
    <string name="email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="agreement_link">https://yandex.ru/legal/practicum_offer/</string>

    <string name="track_name">Трэк</string>
    <string name="track_artist">Исполнитель</string>
    <string name="track_time">Время</string>

    <string name="no_search_results">Ничего не нашлось</string>
    <string name="connection_error">Проблемы со связью</string>
    <string name="error_info">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update">Обновить</string>

    <string name="history">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    
    <string name="duration">Длительность</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="album">Альбом</string>
    <string name="country">Страна</string>
    <string name="start_track_time">00:00</string>

    <string name="new_playlist">Новый плейлист</string>
    <string name="favourite">Избранные треки</string>
    <string name="playlist">Плейлист</string>
    <string name="no_favourite">Ваша медиатека пуста</string>
    <string name="no_playlist">Вы не создали \nни одного плейлиста</string>

    <string name="name">Название*</string>
    <string name="description">Описание</string>
    <string name="create">Создать</string>
    <string name="created">Создан</string>

    <string name="dialog_title">Завершить создание плейлиста?</string>
    <string name="dialog_message">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="finish">Завершить</string>

    <string name="dialog_title_delete">Удалит трек</string>
    <string name="dialog_message_delete">Хотите удалить трек?</string>
    <string name="no">НЕТ</string>
    <string name="yes">ДА</string>

    <string name="track1">трек</string>
    <string name="track2">трека</string>
    <string name="track3">треков</string>

    <string name="minute1">минута</string>
    <string name="minute2">минуты</string>
    <string name="minute3">минут</string>

    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="added_to_playlist">Добавлено в плейлист</string>
    <string name="yet_added">Трек уже добавлен в плейлист</string>

    <string name="share">Поделиться</string>
    <string name="edit">Редактировать информацию</string>
    <string name="delete">Удалить плейлист</string>

    <string name="dialog_title_delete_pl">Удалить плейлист</string>
    <string name="dialog_message_delete_pl">Хотите удалить плейлист?</string>

    <string name="edit_playlist">Редактировать плейлист</string>
    <string name="save">Сохранить</string>
    <string name="no_tracks">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="empty_playlist">В этом плейлисте нет треков</string>
</resources>