<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/button_back"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="4dp"
                android:padding="16dp"
                android:src="@drawable/icon_back" />

            <TextView
                android:id="@+id/text_header"
                style="@style/activity_title"
                android:layout_marginLeft="56dp"
                android:text="@string/settings" />

        </FrameLayout>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/margin_16dp"
            android:paddingVertical="@dimen/margin_20dp"
            android:text="@string/dark_theme"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/settings_text_size"
            android:fontFamily="@font/ys_display_regular"/>


        <TextView
            android:id="@+id/share_app"
            style="@style/settings_text"
            android:text="@string/share_app"
            app:drawableEndCompat="@drawable/icon_share" />


        <TextView
            android:id="@+id/email_support"
            style="@style/settings_text"
            android:text="@string/email_support"
            app:drawableEndCompat="@drawable/icon_support"/>


        <TextView
            android:id="@+id/user_agreement"
            style="@style/settings_text"
            android:text="@string/user_agreement"
            app:drawableEndCompat="@drawable/icon_move_on"/>


    </LinearLayout>

</FrameLayout>