<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/bgColor"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:padding="16dp"
            android:src="@drawable/ic_back_16"
            app:tint="?attr/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/fragment_title"
            style="@style/activity_title"
            android:text="@string/new_playlist" />

    </LinearLayout>

    <ImageView
        android:id="@+id/add_playlist_photo"
        android:layout_width="@dimen/dimen_312dp"
        android:layout_height="@dimen/dimen_312dp"
        android:src="@drawable/add_image_layout"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dimen_28dp"/>

    <EditText
        android:id="@+id/playlist_name"
        style="@style/new_playlist_info"
        android:layout_marginTop="@dimen/dimen_32dp"
        android:hint="@string/name" />

    <EditText
        android:id="@+id/playlist_description"
        style="@style/new_playlist_info"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:hint="@string/description" />

    <View
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/create_playlist"
        android:layout_width="@dimen/dimen_328dp"
        android:layout_height="@dimen/dimen_44dp"
        android:layout_marginBottom="@dimen/dimen_32dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/rectangle_button"
        android:text="@string/create"
        android:gravity="center"
        android:textColor="@color/white"
        android:fontFamily="@font/ys_display_medium"
        android:textSize="@dimen/text_size_16sp"
        android:clickable="true"/>

</LinearLayout>