<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/track_image"
        android:layout_width="@dimen/dimen_44dp"
        android:layout_height="@dimen/dimen_44dp"
        android:layout_marginVertical="@dimen/dimen_8dp"
        android:layout_marginStart="@dimen/dimen_12dp"/>

    <TextView
        android:id="@+id/track_name"
        style="@style/track_info"
        android:layout_marginStart="@dimen/dimen_64dp"
        android:layout_marginTop="@dimen/dimen_12dp"
        android:textSize="@dimen/text_size_16sp"
        android:textColor="?attr/colorPrimary"
        android:text="@string/track_name"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_64dp"
        android:layout_marginTop="@dimen/dimen_36dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/track_artist"
            style="@style/track_info"
            android:text="@string/track_artist"/>

        <ImageView
            android:layout_width="@dimen/dimen_12dp"
            android:layout_height="@dimen/dimen_12dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/icon_point"
            app:tint="?attr/trackArtAndTimeColor"/>

        <TextView
            android:id="@+id/track_time"
            style="@style/track_info"
            android:text="@string/track_time"/>

    </LinearLayout>

</FrameLayout>