<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/bgMainColor"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            style="@style/activity_title"
            android:layout_marginStart="@dimen/dimen_16dp"
            android:text="@string/app_name"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/search_button"
            style="@style/layout_button">

            <LinearLayout
                android:id="@+id/search_info"
                style="@style/button_title">

                <ImageView
                    android:id="@+id/icon_search"
                    style="@style/button_icon"
                    android:src="@drawable/ic_search_20"/>

                <TextView
                    android:id="@+id/text_search"
                    style="@style/medium_text"
                    android:layout_marginLeft= "@dimen/dimen_8dp"
                    android:text="@string/search" />

            </LinearLayout>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/media_library_button"
            style="@style/layout_button">

            <LinearLayout
                android:id="@+id/media_library_info"
                style="@style/button_title">

                <ImageView
                    android:id="@+id/icon_media_library"
                    style="@style/button_icon"
                    android:src="@drawable/ic_media_library_20"/>

                <TextView
                    android:id="@+id/text_media_library"
                    style="@style/medium_text"
                    android:layout_marginLeft= "@dimen/dimen_8dp"
                    android:text="@string/media_library" />

            </LinearLayout>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/settins_button"
            style="@style/layout_button"
            android:layout_marginBottom="@dimen/dimen_16dp">

            <LinearLayout
                android:id="@+id/settigs_info"
                style="@style/button_title">

                <ImageView
                    android:id="@+id/icon_settings"
                    style="@style/button_icon"
                    android:src="@drawable/ic_settings_20"/>

                <TextView
                    android:id="@+id/text_settings"
                    style="@style/medium_text"
                    android:layout_marginLeft= "@dimen/dimen_8dp"
                    android:text="@string/settings" />

            </LinearLayout>

        </FrameLayout>


    </LinearLayout>
</LinearLayout>