<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.AudioPlayerActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/album_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="album, album_info"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/year_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="year, year_info"/>

    <ImageView
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:padding="16dp"
        android:src="@drawable/icon_back"
        app:tint="?attr/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/atwork"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        android:layout_marginTop="@dimen/dimen_16dp"
        app:layout_constraintTop_toBottomOf="@id/button_back"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"/>

    <TextView
        android:id="@+id/track_name"
        style="@style/medium_text.main_track_info"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintTop_toBottomOf="@id/atwork"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"/>

    <TextView
        android:id="@+id/track_artist"
        style="@style/medium_text.main_track_info"
        android:textSize="@dimen/dimen_16dp"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintTop_toBottomOf="@id/track_name"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"/>

    <ImageButton
        android:id="@+id/add_button"
        style="@style/round_button"
        android:backgroundTint="?attr/colorPlayerButton"
        android:src="@drawable/icon_media_plus"
        android:layout_marginTop="@dimen/dimen_44dp"
        app:layout_constraintTop_toBottomOf="@id/track_artist"
        app:layout_constraintStart_toStartOf="@id/left_guideline"/>

    <ImageButton
        android:id="@+id/player_button"
        style="@style/round_button"
        android:layout_width="@dimen/dimen_84dp"
        android:layout_height="@dimen/dimen_84dp"
        android:src="@drawable/icon_play"
        android:backgroundTint="?attr/bgColor"
        android:layout_marginTop="@dimen/dimen_24dp"
        app:layout_constraintTop_toBottomOf="@id/track_artist"
        app:layout_constraintStart_toEndOf="@id/add_button"
        app:layout_constraintEnd_toStartOf="@id/like_button"/>


    <ImageButton
        android:id="@+id/like_button"
        style="@style/round_button"
        android:backgroundTint="?attr/colorPlayerButton"
        android:src="@drawable/icon_like"
        android:layout_marginTop="@dimen/dimen_44dp"
        app:layout_constraintTop_toBottomOf="@id/track_artist"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"/>

    <TextView
        android:id="@+id/current_time"
        android:text="0:00"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_12sp"
        android:textColor="?attr/colorPrimary"
        android:fontFamily="@font/ys_display_regular"
        android:layout_marginTop="@dimen/dimen_4dp"
        app:layout_constraintTop_toBottomOf="@id/player_button"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"/>/>

    <TextView
        android:id="@+id/duration"
        style="@style/track_info.player"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:text="@string/duration"
        app:layout_constraintTop_toBottomOf="@id/current_time"
        app:layout_constraintStart_toEndOf="@id/left_guideline"/>

    <TextView
        android:id="@+id/duration_info"
        style="@style/track_info.player.info"
        android:layout_marginTop="@dimen/dimen_24dp"
        app:layout_constraintTop_toBottomOf="@id/current_time"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"/>

    <TextView
        android:id="@+id/album"
        style="@style/track_info.player"
        android:text="@string/album"
        app:layout_constraintTop_toBottomOf="@id/duration"
        app:layout_constraintStart_toEndOf="@id/left_guideline"/>

    <TextView
        android:id="@+id/album_info"
        style="@style/track_info.player.info"
        app:layout_constraintTop_toBottomOf="@id/duration_info"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"/>

    <TextView
        android:id="@+id/year"
        style="@style/track_info.player"
        android:text="@string/year"
        app:layout_constraintTop_toBottomOf="@id/album"
        app:layout_constraintStart_toEndOf="@id/left_guideline"/>

    <TextView
        android:id="@+id/year_info"
        style="@style/track_info.player.info"
        app:layout_constraintTop_toBottomOf="@id/album_info"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"/>

    <TextView
        android:id="@+id/genre"
        style="@style/track_info.player"
        android:text="@string/genre"
        app:layout_constraintTop_toBottomOf="@id/year"
        app:layout_constraintStart_toEndOf="@id/left_guideline"/>

    <TextView
        android:id="@+id/genre_info"
        style="@style/track_info.player.info"
        app:layout_constraintTop_toBottomOf="@id/year_info"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"/>

    <TextView
        android:id="@+id/country"
        style="@style/track_info.player"
        android:text="@string/country"
        app:layout_constraintTop_toBottomOf="@id/genre"
        app:layout_constraintStart_toEndOf="@id/left_guideline"/>

    <TextView
        android:id="@+id/country_info"
        style="@style/track_info.player.info"
        app:layout_constraintTop_toBottomOf="@id/genre_info"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"/>

</androidx.constraintlayout.widget.ConstraintLayout>