<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_light"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/button_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:padding="16dp"
                android:src="@drawable/ic_back_16"
                app:tint="@color/black_ligth"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                android:id="@+id/playlist_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </FrameLayout>

        <TextView
            android:id="@+id/playlist_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_24dp"
            android:layout_marginStart="@dimen/dimen_16dp"
            android:singleLine="true"
            android:textSize="@dimen/text_size_24sp"
            android:textColor="?attr/colorPlaylistName"
            android:fontFamily="@font/ys_display_bold"/>

        <TextView
            android:id="@+id/playlist_description"
            style="@style/track_info"
            android:layout_marginStart="@dimen/dimen_16dp"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:textSize="@dimen/text_size_16sp"
            android:textColor="@color/black_ligth"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_16dp"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/playlist_time"
                style="@style/track_info"
                android:textSize="@dimen/text_size_16sp"
                android:textColor="@color/black_ligth" />

            <ImageView
                android:layout_width="@dimen/dimen_12dp"
                android:layout_height="@dimen/dimen_12dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_point_12"
                app:tint="@color/black_ligth"/>

            <TextView
                android:id="@+id/playlist_track_count"
                style="@style/track_info"
                android:textSize="@dimen/text_size_16sp"
                android:textColor="@color/black_ligth" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:layout_marginStart="@dimen/dimen_16dp">
            
            <ImageButton
                android:id="@+id/button_share"
                android:layout_width="@dimen/dimen_24dp"
                android:layout_height="@dimen/dimen_24dp"
                android:background="@color/grey_light"
                app:tint="@color/black_ligth"
                android:src="@drawable/ic_share_16"/>

            <ImageButton
                android:id="@+id/button_menu"
                android:layout_width="@dimen/dimen_24dp"
                android:layout_height="@dimen/dimen_24dp"
                android:layout_marginStart="@dimen/dimen_16dp"
                android:background="@color/grey_light"
                app:tint="@color/black_ligth"
                android:src="@drawable/ic_menu_24"/>

        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/darkned"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        android:alpha="0.5"
        android:background="@color/black_ligth"/>

    <LinearLayout
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/rounded_layout"
        android:backgroundTint="?attr/bgColor"
        app:behavior_hideable="false"
        app:behavior_peekHeight="@dimen/dimen_260dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:layout_gravity="center_horizontal"
            app:tint="?attr/searchFieldColor"
            android:src="@drawable/ic_line"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tracks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_32dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/rounded_layout"
        android:backgroundTint="?attr/bgColor"
        app:behavior_hideable="true"
        app:behavior_peekHeight="@dimen/dimen_360dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:layout_gravity="center_horizontal"
        app:tint="?attr/searchFieldColor"
        android:src="@drawable/ic_line"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:layout_marginHorizontal="@dimen/dimen_12dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/playlist_menu_image"
                android:layout_width="@dimen/dimen_44dp"
                android:layout_height="@dimen/dimen_44dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_8dp"
                android:layout_marginTop="@dimen/dimen_4dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/menu_playlist_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_8dp"
                    android:fontFamily="@font/ys_display_regular"
                    android:textSize="@dimen/text_size_16sp"
                    android:textColor="?attr/colorPrimary"/>
                
                <TextView
                    android:id="@+id/menu_track_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ys_display_regular"
                    android:textSize="@dimen/text_size_12sp"
                    android:textColor="?attr/colorMenuText"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/share"
            style="@style/bottom_sheet_button"
            android:text="@string/share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/edit"
            style="@style/bottom_sheet_button"
            android:text="@string/edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/delete"
            style="@style/bottom_sheet_button"
            android:text="@string/delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>